--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p{
 	/*max-height: 100px;*/
 	clear: both;
 	overflow: auto /*scroll/visible/hidden*/;
-	color: #00FFFF;
+	color: #00EEEE;
 }
 
 details{
